--- a/index.html
+++ b/index.html
@@ -7,74 +7,66 @@
     <title>Landing Page</title>
 </head>
 <body>
-<header>
-<div class="logo">Header Logo</div>
-<nav>
-    <ul>
-    <li> <a href="#">header link one</a></li>
-    <li> <a href="#">header link two</a></li>
-    <li> <a href="#">header link three</a></li>
-</ul>
-</nav></header>
+ <header>
+    <div class="logo"> Header Logo</div>
+        <ul>
+            <li><a href="#"> header link one</a></li>
+            <li> <a href="#">header link two</a></li>
+            <li> <a href="#"> header link three</a></li>
+        </ul>
+ </header>
 
-
-<section class="hero">
-<div class="hero-content">
-    <h1>This Website is awesome</h1>
-<p>This website has some subtext that goes here under the main title. it's a smaller font and the color is lower contrast</p>
-
-<button class="cta-button"> sign up</button>
-</div>
-<div class="hero-img">
-    <p>This is a placeholder for an image</p>
-</div>
-</section>
-<section class="info">
-    <h2> Some random information</h2>
-    <div class="container">
-        <div class="card">
-            <div class="card-img"></div>
-            <p>this is some subtext under an illustration or image</p>
-        </div>
-        <div class="card">
-            <div class="card-img"></div>
-            <p>this is some subtext under an illustration or image</p>
-        </div>
-        <div class="card">
-            <div class="card-img"></div>
-            <p>this is some subtext under an illustration or image</p>
-        </div>
-        <div class="card">
-            <div class="card-img"></div>
-            <p>this is some subtext under an illustration or image</p>
-        </div>
+ <section class="hero">
+    <div class="hero-content">
+        <h1> This Website is awesome</h1>
+        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+        <button class="cta-button"> Sign up</button>
     </div>
-</section>
+    <img src="img/daniel-j-schwarz-LYFkdAMB0ig-unsplash.jpg" alt="twilight sun">
+ </section>
 
+<div class="title"> Some Random Information</div>
 
-<section class="quote">
+<div class="container">
+    <div class="info">
+        <img src="img/ismail-gungor-gedik-YK1grhbvNgo-unsplash.jpg" alt="walkway model">
+        <div class="text">This is some subtext under an illutaration or image.</div>
+    </div>
+    <div class="info">
+        <img src="img/martin-katler-At4mo3VXrdQ-unsplash.jpg" alt="workspace">
+        <div class="text">This is some subtext under an illutaration or image.</div>
+    </div>
+        <div class="info">
+            <img src="img/mos-design-pgRVZGdhfR4-unsplash.jpg" alt="bright-building">
+            <div class="text">This is some subtext under an illutaration or image.</div>
+        </div>
+            <div class="info">
+                <img src="img/negley-stockman-8br4bOU7wro-unsplash.jpg" alt="frontdoor">
+                <div class="text">This is some subtext under an illutaration or image.</div>
+            </div>
+</div>
+
+<div class="quote">
     <blockquote>
-        <p>
-            This is an inspiring quote from a customer. Maybe it's just filling up space, or maybe people would actually read it. Who knows?  All i know is that it look nice
-        </p>
-        <cite> Thor, God of Thunder</cite>
-    </blockquote>
-</section>
+    <p> This is an inspiring quote from a customer. Maybe it's just filling up space or maybe people would actually read it. Who knows? All i know is that it look nice</p>
+    <cite>-Thor, God of Thunder</cite>
+</blockquote>
+</div>
 
-<section class="cta">
+<div class="cta">
     <div class="cta-box">
         <div class="cta-text">
-            <h3>Call to action! It's time!</h3>
-            <p> Sign up for product by clicking that button right over there!</p>
-        </div>
-        <button class="cta-button"> sign up</button>
-</div>
+        <h3>Call to action! It's Time!</h3>
+        <p>Sign up for our product by clicking on the button right over there</p>
     </div>
-</section>
+    <button class="cta-button"> Sign up</button>
+    </div></div>
+</div>
 
 <footer>
-    <p>Copyright @ The Odin Project </p>
+    copyright @ The Odin's project.
 </footer>
-</div>
+
+
 </body>
 </html>
