--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <div class="quote">
     <blockquote>
-    <p> This is an inspiring quote from a customer. Maybe it's just filling up space or maybe people would actually read it. Who knows? All i know is that it look nice</p>
+    <p> This is an inspiring quote from a customer. Maybe it's just filling up space or maybe people would actually read it. Who knows? All i know is that it look nice!</p>
     <cite>-Thor, God of Thunder</cite>
 </blockquote>
 </div>
