--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
  <header>
     <div class="logo"> Header Logo</div>
         <ul>
-            <li><a href="#"> header link one</a></li>
-            <li> <a href="#">header link two</a></li>
-            <li> <a href="#"> header link three</a></li>
+            <li><a href="https://github.com/Taiwoleegend/Landing-Page"> Github link one</a></li>
+            <li> <a href="https://github.com/Taiwoleegend/Landing-Page">Github link two</a></li>
+            <li> <a href="https://github.com/Taiwoleegend/Landing-Page"> Github link three</a></li>
         </ul>
  </header>
 
  <section class="hero">
     <div class="hero-content">
-        <h1> This Website is awesome</h1>
-        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-        <button class="cta-button"> Sign up</button>
+        <h1> First Website Landing Page</h1>
+        <p>This website landing page mainly is based on  basic HTML and CSS implementaion and execution, and it was done by me(TAIWO ABIOLA) from scracth</p>
+        <button class="cta-button"><a href="https://github.com/Taiwoleegend/Landing-Page"> </a> Click here!</button>
     </div>
     <img src="img/daniel-j-schwarz-LYFkdAMB0ig-unsplash.jpg" alt="twilight sun">
  </section>
@@ -30,26 +30,26 @@
 <div class="container">
     <div class="info">
         <img src="img/ismail-gungor-gedik-YK1grhbvNgo-unsplash.jpg" alt="walkway model">
-        <div class="text">This is some subtext under an illutaration or image.</div>
+        <div class="text"> I'm Intrested in all kind of Fashion.</div>
     </div>
     <div class="info">
         <img src="img/martin-katler-At4mo3VXrdQ-unsplash.jpg" alt="workspace">
-        <div class="text">This is some subtext under an illutaration or image.</div>
+        <div class="text">I would really love a Workspace just like this</div>
     </div>
         <div class="info">
             <img src="img/mos-design-pgRVZGdhfR4-unsplash.jpg" alt="bright-building">
-            <div class="text">This is some subtext under an illutaration or image.</div>
+            <div class="text">I love diverse Culture and love exploring them</div>
         </div>
             <div class="info">
                 <img src="img/negley-stockman-8br4bOU7wro-unsplash.jpg" alt="frontdoor">
-                <div class="text">This is some subtext under an illutaration or image.</div>
+                <div class="text"> An introvert who loves staying home and playing video games.</div>
             </div>
 </div>
 
 <div class="quote">
     <blockquote>
-    <p> This is an inspiring quote from a customer. Maybe it's just filling up space or maybe people would actually read it. Who knows? All i know is that it look nice!</p>
-    <cite>-Thor, God of Thunder</cite>
+    <p> Whatever you've got going on, just be consistent with it. Who knows? with TIME, everything would fall in place. </p>
+    <cite>-TaiwoLeegend</cite>
 </blockquote>
 </div>
 
@@ -57,9 +57,9 @@
     <div class="cta-box">
         <div class="cta-text">
         <h3>Call to action! It's Time!</h3>
-        <p>Sign up for our product by clicking on the button right over there</p>
+        <p>Follow me on Github and watch me grow exponentially while on my web development journey.</p>
     </div>
-    <button class="cta-button"> Sign up</button>
+    <button class="cta-button"><a href="https://github.com/Taiwoleegend/Landing-Page"></a> Click here!</button>
     </div></div>
 </div>
 
